src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__quit_and_resurrect_session.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍. (e2e-test)   ◉ Tab #1    ○ Tab #2    ○ Tab #3    ○ Tab #4                          Alt <[]>  STAGGERED 
┌ Pane #1 ─────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────┐
│$                                                         ││$                                                         │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                             ┌ Pane #4 ────────────────────────────────────────── PIN ○ ┐                             │
│                             │$                                                         │                             │
│                             │ ┌ Pane #6 ────────────────────────────────────────── PIN ○ ┐                           │
│                             │ │$ █                                                       │                           │
│                             │ │                                                          │                           │
│                             │ │                                                          │───────────────────────────┘
│                             │ │                                                          │───────────────────────────┐
│                             │ │                                                          │                           │
│                             │ │                                                          │                           │
│                             └─│                                                          │                           │
│                               │                                                          │                           │
│                               └──────────────────────────────────────────────────────────┘                           │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ⌃ +g LOCK p PANE t TAB n RESIZE h MOVE s SEARCH o SESSION                      ⌥ + <[]>  STAGGERED 
 (FLOATING PANES VISIBLE): Press Ctrl p, <w> to hide.
