src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__resize_terminal_window.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍. (e2e-test)   ◉ Tab #1                                               
┌ Pane #1 ───────────────────────────────────────┐┌ Pane #2 ───────────────────────────────────────┐                    
│$                                               ││$ █                                             │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
│                                                ││                                                │                    
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘                    
 ⌃g  LOCK  ⌃p  PANE  ⌃t  TAB  ⌃n  RESIZE  ⌃h  MOVE  ⌃s  SEARCH  ⌃o  SESSION     BASE
