src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__scrolling_inside_a_pane.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍. (e2e-test)   ◉ Tab #1                                                                   
┌ Pane #1 ─────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────── SCROLL:  N/M ┐
│$                                                         ││line2                                                     │
│                                                          ││line3                                                     │
│                                                          ││line4                                                     │
│                                                          ││line5                                                     │
│                                                          ││line6                                                     │
│                                                          ││line7                                                     │
│                                                          ││line8                                                     │
│                                                          ││line9                                                     │
│                                                          ││line10                                                    │
│                                                          ││line11                                                    │
│                                                          ││line12                                                    │
│                                                          ││line13                                                    │
│                                                          ││line14                                                    │
│                                                          ││line15                                                    │
│                                                          ││line16                                                    │
│                                                          ││line17                                                    │
│                                                          ││line18                                                    │
│                                                          ││line19                                                    │
│                                                          ││line20                                                    │
│                                                          ││li█e21                                                    │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ⌃s  SEARCH   s  Search  ↓↑  Scroll  PgDn|PgUp  Scroll  d|u  Scroll  e  Edit  ENTER  Select       BASE
