src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__scrolling_inside_a_pane_with_mouse.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍. (e2e-test)   ◉ Tab #1                                                                   
┌ Pane #1 ─────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────── SCROLL:  N/M ┐
│$                                                         ││$ cat /usr/src/zellij/fixtures/e2e/scrolling_inside_a_pane│
│                                                          ││line1                                                     │
│                                                          ││line2                                                     │
│                                                          ││line3                                                     │
│                                                          ││line4                                                     │
│                                                          ││line5                                                     │
│                                                          ││line6                                                     │
│                                                          ││line7                                                     │
│                                                          ││line8                                                     │
│                                                          ││line9                                                     │
│                                                          ││line10                                                    │
│                                                          ││line11                                                    │
│                                                          ││line12                                                    │
│                                                          ││line13                                                    │
│                                                          ││line14                                                    │
│                                                          ││line15                                                    │
│                                                          ││line16                                                    │
│                                                          ││line17                                                    │
│                                                          ││line18                                                    │
│                                                          ││li█e19                                                    │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ⌃g  LOCK  ⌃p  PANE  ⌃t  TAB  ⌃n  RESIZE  ⌃h  MOVE  ⌃s  SEARCH  ⌃o  SESSION                    ...  BASE
