src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__send_command_through_the_cli.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍. (e2e-test)   ◉ Tab #1                                                                                                 
┌ Pane #1 ────────────────────────────────────────────────────────────────┐┌ /usr/src/zellij/fixtures/append-echo-script.sh ─────────────────────────┐
│$ /usr/src/zellij/zellij run -s -- "/usr/src/zellij/fixtures/append-echo-││foo-1                                                                    │
│script.sh"                                                               ││foo-2                                                                    │
│terminal_1                                                               ││█                                                                        │
│$                                                                        ││                                                                         │
│$                                                                        ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
└─────────────────────────────────────────────────────────────────────────┘└ [ EXIT CODE: 0 ] <ENTER> re-run, <ESC> drop to shell, <Ctrl-c> exit ────┘
 ⌃g  LOCK  ⌃p  PANE  ⌃t  TAB  ⌃n  RESIZE  ⌃h  MOVE  ⌃s  SEARCH  ⌃o  SESSION                                                  ...  BASE
